# blank

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: install_blank.sh
src/blank_agentic_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/blank_cli/: cli.py  scaffold.py  texst.py
src/blank_cli/templates/: .gitignore.tpl  README.md.tpl
src/blank_cli/templates/.codex/: config.toml.tpl  install_curated_skills.sh.tpl  install_repo_skills.sh.tpl  project.md.tpl
src/blank_cli/templates/.codex/skills/adversarial-brainstorm-recorder/: SKILL.md.tpl
src/blank_cli/templates/.codex/skills/jp-pol-sci-r-pipeline/: SKILL.md.tpl
src/blank_cli/templates/.codex/skills/socsci-critical-reader/: SKILL.md.tpl
src/blank_cli/templates/.codex/skills/typst-paper-sync-check/: SKILL.md.tpl
src/blank_cli/templates/analysis/data/: codebook.md.tpl
src/blank_cli/templates/analysis/scripts/: 00_setup.R.tpl  20_data.R.tpl  30_results_main.R.tpl
src/blank_cli/templates/paper/: aesthetics.typ.tpl  paper_latex.typ.tpl
tests/: test_cli.py  test_texst.py
